--- a/index.html
+++ b/index.html
@@ -512,6 +512,10 @@
                             <div style={{ display: 'flex', alignItems: 'center', gap: '8px', color: '#6b7280' }}><span style={{ fontSize: '13px' }}>{item.value}</span><i className="fa-solid fa-chevron-right" style={{ fontSize: '12px' }}></i></div>
                         </div>
                     ))}
+                    <a href="https://wa.me/971585072588?text=Hola!%20Necesito%20ayuda%20con%20LUCAS" target="_blank" rel="noopener noreferrer" style={{ display: 'flex', alignItems: 'center', justifyContent: 'space-between', padding: '14px 0', borderBottom: '1px solid #1a1a1a', textDecoration: 'none', color: 'white' }}>
+                        <div style={{ display: 'flex', alignItems: 'center', gap: '12px' }}><i className="fa-brands fa-whatsapp" style={{ color: '#25D366', width: '20px' }}></i><span>Ayuda / Soporte</span></div>
+                        <i className="fa-solid fa-chevron-right" style={{ fontSize: '12px', color: '#6b7280' }}></i>
+                    </a>
                     <button onClick={handleLogout} style={{ width: '100%', padding: '14px', background: 'transparent', color: '#ef4444', border: '1px solid rgba(239, 68, 68, 0.3)', borderRadius: '12px', fontSize: '14px', fontWeight: 600, marginTop: '24px', cursor: 'pointer' }}><i className="fa-solid fa-right-from-bracket"></i> Cerrar Sesión</button>
                     <div style={{ textAlign: 'center', marginTop: '24px', color: '#4b5563', fontSize: '12px' }}>LUCAS Agent v1.0.0 (Pilot)</div>
                 </div>
@@ -569,7 +573,6 @@
                     {screen === 'success' && selectedTask && <SuccessScreen task={selectedTask} setScreen={setScreen} setActiveTab={setActiveTab} setSelectedTask={setSelectedTask} />}
                     {screen === 'wallet' && agent && <WalletScreen agent={agent} transactions={transactions} />}
                     {screen === 'profile' && agent && <ProfileScreen agent={agent} setAgent={setAgent} setScreen={setScreen} />}
-                    {showBottomNav && <WhatsAppButton />}
                     {showBottomNav && <BottomNav activeTab={activeTab} setActiveTab={setActiveTab} setScreen={setScreen} />}
                 </div>
             );
