--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     
                     {/* Brand Name */}
-                    <h1 style={{ fontSize: '42px', fontWeight: 800, marginBottom: '8px', letterSpacing: '-1px' }}>LUCAS</h1>
+                    <img src="LUCAS_Wordmark_White_Transparent.png" alt="LUCAS" style={{ height: '40px', marginBottom: '8px' }} />
                     
                     {/* Tagline */}
                     <p style={{ color: '#deff9a', fontSize: '14px', fontWeight: 600, textTransform: 'uppercase', letterSpacing: '2px', marginBottom: '8px' }}>The API for Reality</p>
