--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div className="fade-in" style={{ padding: '20px', paddingBottom: '90px' }}>
                     <div style={{ display: 'flex', justifyContent: 'space-between', alignItems: 'center', marginBottom: '20px' }}>
                         <h2 style={{ fontSize: '22px', fontWeight: 700 }}>Hola, {agent.name.split(' ')[0]} 👋</h2>
-                        <div style={{ width: '40px', height: '40px', background: '#262626', borderRadius: '50%', display: 'flex', alignItems: 'center', justifyContent: 'center', color: '#deff9a' }}><i className="fa-solid fa-user"></i></div>
+                        <img src="icon-512.png" alt="LUCAS" style={{ width: '40px', height: '40px', borderRadius: '12px' }} onClick={() => setScreen('profile')} />
                     </div>
                     <div style={{ background: 'linear-gradient(135deg, #1a1a1a 0%, #111 100%)', border: '1px solid #262626', borderRadius: '16px', padding: '16px', marginBottom: '24px' }}>
                         <div style={{ fontSize: '11px', color: '#6b7280', textTransform: 'uppercase', letterSpacing: '1px' }}>Tu Balance</div>
