--- a/plan/index.html
+++ b/plan/index.html
@@ -378,7 +378,7 @@
         // ============================================
         // CONFIGURATION - CHANGE PASSWORD HERE
         // ============================================
-        var ACCESS_PASSWORD = 'LucasInvestor2025!';  // CHANGED - old one was exposed
+        var ACCESS_PASSWORD = 'lucas2025';  // 
         var PDF_URL = 'LUCAS_Business_Plan.pdf';
         
         // Supabase config
