--- a/plan/index.html
+++ b/plan/index.html
@@ -331,7 +331,7 @@
         
         <div class="footer">
             <p>This document is confidential.</p>
-            <p style="margin-top: 8px;">Questions? <a href="mailto:diego@lucas.app">diego@lucas.app</a></p>
+            <p style="margin-top: 8px;">Questions? <a href="mailto:hello@lucas.app">hello@lucas.app</a></p>
         </div>
     </div>
     
