--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
     <style>
         :root { --lucas-green: #deff9a; --lucas-dark: #050505; --lucas-card: #0a0a0a; --lucas-border: #1a1a1a; --safe-top: env(safe-area-inset-top); --safe-bottom: env(safe-area-inset-bottom); }
         * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { font-family: 'Urbanist', sans-serif; background: var(--lucas-dark); color: #fff; min-height: 100vh; min-height: 100dvh; }
-        .screen { display: none; min-height: 100vh; min-height: 100dvh; padding-top: var(--safe-top); flex-direction: column; }
+        body { font-family: 'Urbanist', sans-serif; background: var(--lucas-dark); color: #fff; min-height: 100vh; min-height: 100dvh; overflow-x: hidden; }
+        .screen { display: none; min-height: 100vh; min-height: 100dvh; padding-top: var(--safe-top); flex-direction: column; width: 100%; }
         .screen.active { display: flex; }
         
         /* Login */
         .login-screen { 
             justify-content: center; 
             align-items: center; 
-            padding: 24px; 
+            padding: 24px;
+            width: 100%;
             background: radial-gradient(ellipse at center top, rgba(222,255,154,0.08) 0%, transparent 60%); 
         }
         .login-container { 
@@ -37,7 +38,8 @@
             flex-direction: column; 
             align-items: center; 
             width: 100%; 
-            max-width: 320px; 
+            max-width: 320px;
+            margin: 0 auto;
         }
         .login-logo { 
             width: 72px; 
