--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             justify-content: center; 
             align-items: center; 
             padding: 24px;
+            padding-top: calc(24px + var(--safe-top));
+            padding-bottom: calc(24px + var(--safe-bottom));
             width: 100%;
+            min-height: 100vh;
+            min-height: 100dvh;
             background: radial-gradient(ellipse at center top, rgba(222,255,154,0.08) 0%, transparent 60%); 
         }
         .login-container { 
@@ -39,7 +43,7 @@
             align-items: center; 
             width: 100%; 
             max-width: 320px;
-            margin: 0 auto;
+            margin: auto;
         }
         .login-logo { 
             width: 72px; 
@@ -325,7 +329,7 @@
         <div class="login-container">
             <img src="icon-512.png" alt="LUCAS" class="login-logo">
             <h1 class="login-title">LUCAS Inspector</h1>
-            <p class="login-subtitle">Property Verification Platform</p>
+            <p class="login-subtitle">Dubai Pilot Program</p>
             
             <form class="login-form" onsubmit="handleLogin(event)">
                 <div class="input-group">
