--- a/lucas-api-docs.html
+++ b/lucas-api-docs.html
@@ -26,6 +26,11 @@
         }
     </script>
     <style>
+        /* Base dark background fallback */
+        html, body {
+            background-color: #0a0a0a;
+        }
+        
         /* Custom scrollbar */
         ::-webkit-scrollbar { width: 6px; height: 6px; }
         ::-webkit-scrollbar-track { background: #0a0a0a; }
