--- a/lucas-api-docs.html
+++ b/lucas-api-docs.html
@@ -55,7 +55,7 @@
         <!-- Sidebar -->
         <aside class="w-72 border-r border-lucas-border fixed h-screen overflow-y-auto bg-lucas-dark z-50 flex flex-col">
             <div class="p-5 border-b border-lucas-border">
-                <a href="https://app.lucas.app" class="flex items-center gap-3">
+                <a href="https://lucas.app" class="flex items-center gap-3">
                     <div class="w-8 h-8 rounded-lg bg-lucas-green flex items-center justify-center">
                         <svg class="w-5 h-5 text-black" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L2 7v10l10 5 10-5V7L12 2zm0 2.18l6.9 3.45L12 11.09 5.1 7.63 12 4.18zM4 8.82l7 3.5v7.36l-7-3.5V8.82zm9 10.86v-7.36l7-3.5v7.36l-7 3.5z"/></svg>
                     </div>
@@ -105,7 +105,7 @@
                 </div>
             </nav>
             <div class="p-4 border-t border-lucas-border">
-                <a href="https://app.lucas.app" class="flex items-center gap-2 text-sm text-gray-500 hover:text-lucas-green transition">
+                <a href="https://lucas.app" class="flex items-center gap-2 text-sm text-gray-500 hover:text-lucas-green transition">
                     <i class="fa-solid fa-arrow-left text-xs"></i>
                     Back to lucas.app
                 </a>
@@ -361,7 +361,7 @@ proofs = client.proofs.list()</code></pre>
             <footer class="border-t border-lucas-border py-8 px-10">
                 <div class="flex items-center justify-between text-sm">
                     <p class="text-gray-600">© 2025 LUCAS. All rights reserved.</p>
-                    <a href="https://app.lucas.app" class="text-gray-500 hover:text-lucas-green">lucas.app</a>
+                    <a href="https://lucas.app" class="text-gray-500 hover:text-lucas-green">lucas.app</a>
                 </div>
             </footer>
         </main>
