--- a/lucas-api-docs.html
+++ b/lucas-api-docs.html
@@ -98,7 +98,7 @@
                         <i class="fa-solid fa-chevron-right chevron text-[10px]"></i>
                     </button>
                     <div class="sidebar-items mt-1 space-y-0.5">
-                        <a href="#proofs" class="nav-link block px-3 py-2 text-sm text-gray-400 hover:text-white border-l-2 border-transparent rounded-r">Proofs</a>
+                        <a href="#proofs" class="nav-link block px-3 py-2 text-sm text-gray-400 hover:text-white border-l-2 border-transparent rounded-r">LUCAS Proofs</a>
                         <a href="#assets" class="nav-link block px-3 py-2 text-sm text-gray-400 hover:text-white border-l-2 border-transparent rounded-r">Assets</a>
                         <a href="#webhooks" class="nav-link block px-3 py-2 text-sm text-gray-400 hover:text-white border-l-2 border-transparent rounded-r">Webhooks</a>
                     </div>
@@ -215,9 +215,9 @@ proofs = client.proofs.list()</code></pre>
                     <div class="w-1/2 p-10 border-r border-lucas-border">
                         <div class="flex items-center gap-3 mb-4">
                             <div class="w-8 h-8 rounded-lg bg-lucas-green/10 flex items-center justify-center"><i class="fa-solid fa-file-shield text-lucas-green text-sm"></i></div>
-                            <h2 class="text-2xl font-bold text-white">Proofs</h2>
+                            <h2 class="text-2xl font-bold text-white">LUCAS Proofs</h2>
                         </div>
-                        <p class="text-gray-400 mb-6">A Proof is a cryptographically signed record of a physical asset's condition at a specific point in time.</p>
+                        <p class="text-gray-400 mb-6">A LUCAS Proof is a cryptographically signed record of a physical asset's condition at a specific point in time.</p>
                         <div class="space-y-3 mb-8">
                             <div class="flex items-center gap-3 p-3 bg-lucas-card border border-lucas-border rounded-lg hover:border-lucas-green/30 transition">
                                 <span class="method-get px-2 py-0.5 rounded text-[10px] font-bold font-mono">GET</span>
