--- a/lucas-api-docs.html
+++ b/lucas-api-docs.html
@@ -55,14 +55,9 @@
         <!-- Sidebar -->
         <aside class="w-72 border-r border-lucas-border fixed h-screen overflow-y-auto bg-lucas-dark z-50 flex flex-col">
             <div class="p-5 border-b border-lucas-border">
-                <a href="https://lucas.app" class="flex items-center gap-3">
-                    <div class="w-8 h-8 rounded-lg bg-lucas-green flex items-center justify-center">
-                        <svg class="w-5 h-5 text-black" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L2 7v10l10 5 10-5V7L12 2zm0 2.18l6.9 3.45L12 11.09 5.1 7.63 12 4.18zM4 8.82l7 3.5v7.36l-7-3.5V8.82zm9 10.86v-7.36l7-3.5v7.36l-7 3.5z"/></svg>
-                    </div>
-                    <div class="flex items-baseline gap-2">
-                        <span class="text-white font-bold text-lg">LUCAS</span>
-                        <span class="text-gray-500 text-sm">API</span>
-                    </div>
+                <a href="https://lucas.app" class="flex items-center gap-2">
+                    <img src="LUCAS_logo White_on Rectangle_Transparent.png" alt="LUCAS" class="h-8">
+                    <span class="text-gray-500 text-sm">API</span>
                 </a>
             </div>
             <div class="px-5 py-3 border-b border-lucas-border">
