--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -98,9 +98,9 @@
     <nav class="fixed w-full z-50 bg-lucas-dark/80 backdrop-blur-md border-b border-white/5">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
-                <a href="lucas-landing-page-v2.html" class="flex items-center">
-                    <img src="logo.png" alt="LUCAS" class="h-10 w-auto" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
-                    <span class="text-xl font-bold tracking-tight text-white hidden items-center gap-2">LUCAS<span class="text-lucas-green">.</span></span>
+                <a href="https://lucas.app" class="flex items-center">
+                    <img src="LUCAS_logo White_on Rectangle_Transparent.svg" alt="LUCAS" class="h-10 w-auto" onerror="this.style.display='none';this.nextElementSibling.style.display='inline';">
+                    <span class="text-2xl font-bold tracking-tight text-white hidden">LUCAS<span class="text-lucas-green">.</span></span>
                 </a>
                 
                 <div class="hidden md:flex items-center gap-8">
@@ -617,17 +617,17 @@
                     <a href="https://wa.me/971501234567" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="mailto:inspectors@lucas.app" class="text-gray-400 hover:text-lucas-green transition text-sm">inspectors@lucas.app</a>
+                    <a href="/cdn-cgi/l/email-protection#5f36312c2f3a3c2b302d2c1f332a3c3e2c713e2f2f" class="text-gray-400 hover:text-lucas-green transition text-sm"><span class="__cf_email__" data-cfemail="a9c0c7dad9cccaddc6dbdae9c5dccac8da87c8d9d9">[email&#160;protected]</span></a>
                 </div>
             </div>
             
             <div class="mt-8 pt-8 border-t border-lucas-border text-center">
-                <a href="lucas-landing-page-v2.html" class="text-gray-500 hover:text-lucas-green transition text-sm">← Back to LUCAS.app</a>
+                <a href="https://lucas.app" class="text-gray-500 hover:text-lucas-green transition text-sm">← Back to LUCAS.app</a>
             </div>
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         function toggleFaq(button) {
             const item = button.closest('.faq-item');
             document.querySelectorAll('.faq-item').forEach(other => {
@@ -656,11 +656,3 @@
                     throw new Error('Submission failed');
                 }
             } catch (error) {
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Submit Application';
-                alert('Something went wrong. Please try again or contact us via WhatsApp.');
-            }
-        });
-    </script>
-</body>
-</html>
