--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
                 
                 <div class="flex items-center gap-3">
-                    <a href="https://app.lucas.app/lucas-inspectors.html" class="hidden sm:flex items-center gap-1.5 px-4 py-2 rounded-full border border-white/20 text-gray-400 hover:border-white/40 hover:text-white transition text-sm font-medium">
+                    <a href="lucas-inspectors.html" class="hidden sm:flex items-center gap-1.5 px-4 py-2 rounded-full border border-white/20 text-gray-400 hover:border-white/40 hover:text-white transition text-sm font-medium">
                         <i class="fa-solid fa-camera-retro text-xs"></i>
                         <span>Inspectors</span>
                     </a>
@@ -239,7 +239,7 @@
             <a href="#faq" onclick="toggleMobileMenu()" class="text-lg font-medium text-gray-300 hover:text-lucas-green">FAQ</a>
             <hr class="border-lucas-border">
             <a href="#audit-pilot" onclick="toggleMobileMenu()" class="bg-lucas-green text-black px-5 py-3 rounded-full font-bold hover:bg-white transition text-center">Free Audit Pilot</a>
-            <a href="https://app.lucas.app/lucas-inspectors.html" onclick="toggleMobileMenu()" class="flex items-center justify-center gap-2 px-5 py-3 rounded-full border border-white/20 text-gray-400 hover:border-white/40 hover:text-white transition text-sm font-medium">
+            <a href="lucas-inspectors.html" onclick="toggleMobileMenu()" class="flex items-center justify-center gap-2 px-5 py-3 rounded-full border border-white/20 text-gray-400 hover:border-white/40 hover:text-white transition text-sm font-medium">
                 <i class="fa-solid fa-camera-retro"></i>
                 <span>Become an Inspector</span>
             </a>
@@ -1832,7 +1832,7 @@
             
             <!-- Inspector Recruitment - Elevated Design -->
             <div class="flex justify-center mb-10">
-                <a href="https://app.lucas.app/lucas-inspectors.html" class="group relative">
+                <a href="lucas-inspectors.html" class="group relative">
                     <div class="absolute -inset-0.5 bg-gradient-to-r from-lucas-green/50 via-lucas-green/20 to-lucas-green/50 rounded-2xl blur opacity-40 group-hover:opacity-70 transition duration-300"></div>
                     <div class="relative flex items-center gap-4 px-6 py-4 bg-lucas-card border border-lucas-border rounded-xl hover:border-lucas-green/30 transition-all">
                         <div class="w-10 h-10 rounded-full bg-lucas-green/10 border border-lucas-green/30 flex items-center justify-center flex-shrink-0">
