--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -79,7 +79,7 @@
             <div class="flex items-center justify-between h-20">
                 <a href="https://lucas.app" class="flex items-center">
                     <!-- Black logo for light mode -->
-                    <img src="LUCAS_logo_black.svg" alt="LUCAS" class="h-10 w-auto" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-flex';">
+                    <img src="LUCAS_logo Black_on Rectangle_Transparent.png" alt="LUCAS" class="h-10 w-auto" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-flex';">
                     <span class="text-2xl font-bold tracking-tight text-lucas-dark hidden items-center">LUCAS<span class="text-lucas-greenDark">.</span></span>
                 </a>
                 
@@ -704,7 +704,7 @@
                     <a href="https://wa.me/971585072588" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="mailto:hello@lucas.app" class="text-gray-400 hover:text-white transition text-sm">hello@lucas.app</a>
+                    <a href="/cdn-cgi/l/email-protection#d5bdb0b9b9ba95b9a0b6b4a6fbb4a5a5" class="text-gray-400 hover:text-white transition text-sm"><span class="__cf_email__" data-cfemail="1b737e7777745b776e787a68357a6b6b">[email&#160;protected]</span></a>
                 </div>
             </div>
             
@@ -717,7 +717,7 @@
     <!-- ============================================ -->
     <!-- SCRIPTS -->
     <!-- ============================================ -->
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         function toggleFaq(button) {
             const item = button.closest('.faq-item');
             document.querySelectorAll('.faq-item').forEach(other => {
@@ -762,13 +762,4 @@
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
-                        entry.target.classList.add('visible');
-                    }
-                });
-            }, observerOptions);
-
-            document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
-        });
-    </script>
-</body>
-</html>
+                        entry.ta
