--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -78,7 +78,6 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="https://lucas.app" class="flex items-center">
-                    <!-- Black logo for light mode -->
                     <img src="LUCAS_logo Black_on Rectangle_Transparent.png" alt="LUCAS" class="h-10 w-auto" onerror="this.style.display='none';this.nextElementSibling.style.display='inline-flex';">
                     <span class="text-2xl font-bold tracking-tight text-lucas-dark hidden items-center">LUCAS<span class="text-lucas-greenDark">.</span></span>
                 </a>
@@ -97,11 +96,8 @@
         </div>
     </nav>
 
-    <!-- ============================================ -->
     <!-- HERO -->
-    <!-- ============================================ -->
     <section class="relative pt-32 pb-20 sm:pt-40 sm:pb-28 overflow-hidden bg-white">
-        <!-- Subtle background pattern -->
         <div class="absolute inset-0 opacity-40">
             <div class="absolute top-20 left-1/4 w-[500px] h-[500px] bg-lucas-green/30 rounded-full blur-[150px]"></div>
             <div class="absolute bottom-0 right-1/4 w-[300px] h-[300px] bg-lucas-green/20 rounded-full blur-[100px]"></div>
@@ -109,20 +105,17 @@
 
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="text-center">
-                <!-- Badge -->
                 <div class="inline-flex items-center gap-2 px-4 py-2 rounded-full bg-lucas-muted border border-lucas-border mb-8">
                     <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
                     <span class="text-sm text-gray-600">Limited positions in <span class="text-lucas-dark font-semibold">Dubai</span></span>
                 </div>
 
-                <!-- Headline -->
                 <h1 class="text-4xl sm:text-6xl lg:text-7xl font-bold tracking-tight mb-6 text-lucas-dark">
                     Become a Certified
                     <br>
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-lucas-dark to-gray-600">LUCAS Inspector</span>
                 </h1>
 
-                <!-- Sub-headline -->
                 <p class="text-xl sm:text-2xl text-gray-600 mb-4 max-w-3xl mx-auto">
                     Join a network of professionals protecting millions in real estate investments across Dubai.
                 </p>
@@ -130,7 +123,6 @@
                     We're building the most trusted property inspection network in the UAE. If you have an eye for detail and take pride in professional work, we want to hear from you.
                 </p>
 
-                <!-- CTA -->
                 <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mb-16">
                     <a href="#apply" class="inline-flex items-center gap-3 px-8 py-4 btn-primary font-bold text-lg rounded-full hover:scale-105 transition-all">
                         <span>Apply to Join</span>
@@ -142,7 +134,6 @@
                     </a>
                 </div>
 
-                <!-- Trust indicators -->
                 <div class="flex flex-wrap justify-center gap-6 sm:gap-10 text-sm text-gray-500">
                     <div class="flex items-center gap-2">
                         <div class="w-8 h-8 rounded-full bg-lucas-green/50 flex items-center justify-center">
@@ -167,9 +158,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- THE MISSION -->
-    <!-- ============================================ -->
     <section class="py-20 bg-lucas-light relative overflow-hidden">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="text-center mb-16 reveal">
@@ -208,9 +197,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- THE OPPORTUNITY -->
-    <!-- ============================================ -->
     <section id="opportunity" class="py-20 bg-white relative">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 reveal">
@@ -222,7 +209,6 @@
             </div>
 
             <div class="grid lg:grid-cols-2 gap-8 items-center">
-                <!-- Left: Key benefits -->
                 <div class="space-y-4 reveal">
                     <div class="flex items-start gap-4 p-5 bg-lucas-muted border border-lucas-border rounded-xl hover:bg-lucas-green/10 transition-colors">
                         <div class="w-12 h-12 rounded-xl bg-lucas-green/50 flex items-center justify-center flex-shrink-0">
@@ -265,7 +251,6 @@
                     </div>
                 </div>
 
-                <!-- Right: Sample day card -->
                 <div class="reveal">
                     <div class="bg-white border border-lucas-border rounded-2xl overflow-hidden card-shadow-lg">
                         <div class="px-6 py-4 border-b border-lucas-border bg-lucas-dark">
@@ -308,9 +293,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- OUR STANDARDS -->
-    <!-- ============================================ -->
     <section id="standards" class="py-20 bg-lucas-muted relative">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 reveal">
@@ -322,7 +305,6 @@
             </div>
 
             <div class="grid md:grid-cols-2 gap-8">
-                <!-- Requirements -->
                 <div class="reveal">
                     <div class="bg-white border border-lucas-border rounded-2xl p-6 h-full card-shadow">
                         <div class="flex items-center gap-3 mb-6">
@@ -372,7 +354,6 @@
                     </div>
                 </div>
 
-                <!-- Preferred -->
                 <div class="reveal">
                     <div class="bg-white border border-lucas-border rounded-2xl p-6 h-full card-shadow">
                         <div class="flex items-center gap-3 mb-6">
@@ -423,7 +404,6 @@
                 </div>
             </div>
 
-            <!-- Training note -->
             <div class="mt-10 reveal">
                 <div class="bg-white border border-lucas-border rounded-2xl p-6 flex flex-col sm:flex-row items-center gap-6 card-shadow">
                     <div class="w-16 h-16 rounded-2xl bg-lucas-green/50 flex items-center justify-center flex-shrink-0">
@@ -438,9 +418,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- CERTIFICATION JOURNEY -->
-    <!-- ============================================ -->
     <section id="journey" class="py-20 bg-white relative overflow-hidden">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
             <div class="text-center mb-16 reveal">
@@ -452,40 +430,28 @@
             </div>
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6 reveal">
-                <!-- Step 1 -->
-                <div class="relative">
-                    <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
-                        <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">1</div>
-                        <h3 class="text-lucas-dark font-bold mb-2">Apply</h3>
-                        <p class="text-gray-500 text-sm">Submit your application. We review within 48 hours.</p>
-                    </div>
+                <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
+                    <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">1</div>
+                    <h3 class="text-lucas-dark font-bold mb-2">Apply</h3>
+                    <p class="text-gray-500 text-sm">Submit your application. We review within 48 hours.</p>
                 </div>
 
-                <!-- Step 2 -->
-                <div class="relative">
-                    <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
-                        <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">2</div>
-                        <h3 class="text-lucas-dark font-bold mb-2">Interview</h3>
-                        <p class="text-gray-500 text-sm">Brief call to understand your background and availability.</p>
-                    </div>
+                <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
+                    <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">2</div>
+                    <h3 class="text-lucas-dark font-bold mb-2">Interview</h3>
+                    <p class="text-gray-500 text-sm">Brief call to understand your background and availability.</p>
                 </div>
 
-                <!-- Step 3 -->
-                <div class="relative">
-                    <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
-                        <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">3</div>
-                        <h3 class="text-lucas-dark font-bold mb-2">Training</h3>
-                        <p class="text-gray-500 text-sm">2-day paid certification. Learn our standards and app.</p>
-                    </div>
+                <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
+                    <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">3</div>
+                    <h3 class="text-lucas-dark font-bold mb-2">Training</h3>
+                    <p class="text-gray-500 text-sm">2-day paid certification. Learn our standards and app.</p>
                 </div>
 
-                <!-- Step 4 -->
-                <div class="relative">
-                    <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
-                        <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">4</div>
-                        <h3 class="text-lucas-dark font-bold mb-2">Certified</h3>
-                        <p class="text-gray-500 text-sm">Pass certification, start receiving assignments.</p>
-                    </div>
+                <div class="bg-lucas-muted border border-lucas-border rounded-2xl p-6 text-center h-full hover:bg-lucas-green/10 transition-colors">
+                    <div class="w-12 h-12 rounded-full bg-lucas-dark text-white font-bold flex items-center justify-center mx-auto mb-4 text-lg">4</div>
+                    <h3 class="text-lucas-dark font-bold mb-2">Certified</h3>
+                    <p class="text-gray-500 text-sm">Pass certification, start receiving assignments.</p>
                 </div>
             </div>
 
@@ -493,9 +459,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- FAQ -->
-    <!-- ============================================ -->
     <section id="faq" class="py-20 bg-lucas-muted relative">
         <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12 reveal">
@@ -591,9 +555,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- APPLICATION FORM -->
-    <!-- ============================================ -->
     <section id="apply" class="py-20 bg-white relative overflow-hidden">
         <div class="absolute inset-0 opacity-30">
             <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[600px] h-[600px] bg-lucas-green/40 rounded-full blur-[150px]"></div>
@@ -688,9 +650,7 @@
         </div>
     </section>
 
-    <!-- ============================================ -->
     <!-- FOOTER -->
-    <!-- ============================================ -->
     <footer class="bg-lucas-dark py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col sm:flex-row items-center justify-between gap-6">
@@ -704,7 +664,7 @@
                     <a href="https://wa.me/971585072588" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="/cdn-cgi/l/email-protection#d5bdb0b9b9ba95b9a0b6b4a6fbb4a5a5" class="text-gray-400 hover:text-white transition text-sm"><span class="__cf_email__" data-cfemail="1b737e7777745b776e787a68357a6b6b">[email&#160;protected]</span></a>
+                    <a href="mailto:hello@lucas.app" class="text-gray-400 hover:text-white transition text-sm">hello@lucas.app</a>
                 </div>
             </div>
             
@@ -714,10 +674,7 @@
         </div>
     </footer>
 
-    <!-- ============================================ -->
-    <!-- SCRIPTS -->
-    <!-- ============================================ -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         function toggleFaq(button) {
             const item = button.closest('.faq-item');
             document.querySelectorAll('.faq-item').forEach(other => {
@@ -726,7 +683,6 @@
             item.classList.toggle('open');
         }
 
-        // Form submission
         document.getElementById('inspector-application').addEventListener('submit', async function(e) {
             e.preventDefault();
             const formData = new FormData(this);
@@ -752,7 +708,6 @@
             }
         });
 
-        // Scroll reveal animation
         document.addEventListener('DOMContentLoaded', function() {
             const observerOptions = {
                 threshold: 0.1,
@@ -762,4 +717,13 @@
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
-                        entry.ta
+                        entry.target.classList.add('visible');
+                    }
+                });
+            }, observerOptions);
+
+            document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
+        });
+    </script>
+</body>
+</html>
