--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -92,7 +92,7 @@
         <!-- Video Background -->
         <div class="absolute inset-0 z-0">
             <video autoplay muted loop playsinline class="absolute w-full h-full object-cover opacity-60">
-                <source src="hero-video.mp4" type="video/mp4">
+                <source src="https://cdn.pixabay.com/video/2022/03/18/111203-689949815_large.mp4" type="video/mp4">
             </video>
             <div class="absolute inset-0 bg-gradient-to-b from-lucas-dark/70 via-lucas-dark/60 to-lucas-dark"></div>
         </div>
