--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -69,7 +69,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="https://lucas.app" class="flex items-center">
-                    <img src="LUCAS_logo White_on Rectangle_Transparent.svg" alt="LUCAS" class="nav-logo-light h-10 w-auto">
+                    <img src="LUCAS_logo White_on Rectangle_Transparent.png" alt="LUCAS" class="nav-logo-light h-10 w-auto">
                     <img src="LUCAS_logo Black_on Rectangle_Transparent.png" alt="LUCAS" class="nav-logo-dark h-10 w-auto hidden">
                 </a>
                 
@@ -644,7 +644,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col sm:flex-row items-center justify-between gap-6">
                 <div class="flex items-center gap-3">
-                    <img src="LUCAS_logo White_on Rectangle_Transparent.svg" alt="LUCAS" class="h-8">
+                    <img src="LUCAS_logo White_on Rectangle_Transparent.png" alt="LUCAS" class="h-8">
                     <span class="text-gray-600">|</span>
                     <span class="text-gray-400 text-sm">Inspector Recruitment</span>
                 </div>
