--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -384,8 +384,8 @@
                                     <i class="fa-solid fa-plus text-amber-600 text-xs"></i>
                                 </div>
                                 <div>
-                                    <p class="text-lucas-dark font-medium">Thermal imaging equipment</p>
-                                    <p class="text-gray-500 text-sm">For advanced inspections and premium assignments</p>
+                                    <p class="text-lucas-dark font-medium">Moisture detection equipment</p>
+                                    <p class="text-gray-500 text-sm">For identifying leaks, water damage, and mold risk</p>
                                 </div>
                             </li>
                             <li class="flex items-start gap-3">
@@ -655,7 +655,7 @@
                     <a href="https://wa.me/971585072588" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="mailto:hello@lucas.app" class="text-gray-400 hover:text-white transition text-sm">hello@lucas.app</a>
+                    <a href="/cdn-cgi/l/email-protection#83ebe6efefecc3eff6e0e2f0ade2f3f3" class="text-gray-400 hover:text-white transition text-sm"><span class="__cf_email__" data-cfemail="0169646d6d6e416d746260722f607171">[email&#160;protected]</span></a>
                 </div>
             </div>
             
@@ -665,7 +665,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Navbar scroll effect
         const navbar = document.getElementById('navbar');
         window.addEventListener('scroll', function() {
