--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -655,7 +655,7 @@
                     <a href="https://wa.me/971585072588" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="/cdn-cgi/l/email-protection#83ebe6efefecc3eff6e0e2f0ade2f3f3" class="text-gray-400 hover:text-white transition text-sm"><span class="__cf_email__" data-cfemail="0169646d6d6e416d746260722f607171">[email&#160;protected]</span></a>
+                    <a href="mailto:inspectors@lucas.app" class="text-gray-400 hover:text-white transition text-sm">inspectors@lucas.app</a>
                 </div>
             </div>
             
@@ -665,7 +665,7 @@
         </div>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Navbar scroll effect
         const navbar = document.getElementById('navbar');
         window.addEventListener('scroll', function() {
