--- a/index.html
+++ b/index.html
@@ -1819,7 +1819,7 @@
                 <a href="https://x.com/joinLUCASapp" target="_blank" rel="noopener noreferrer" class="w-10 h-10 rounded-full bg-lucas-card border border-lucas-border flex items-center justify-center text-gray-400 hover:text-lucas-green hover:border-lucas-green/50 transition" aria-label="X">
                     <svg class="w-4 h-4 fill-current" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                 </a>
-                <a href="/cdn-cgi/l/email-protection#ddb5b8b1b1b29db1a8bebcaef3bcadad" class="w-10 h-10 rounded-full bg-lucas-card border border-lucas-border flex items-center justify-center text-gray-400 hover:text-lucas-green hover:border-lucas-green/50 transition" aria-label="Email">
+                <a href="mailto:hello@lucas.app" class="w-10 h-10 rounded-full bg-lucas-card border border-lucas-border flex items-center justify-center text-gray-400 hover:text-lucas-green hover:border-lucas-green/50 transition" aria-label="Email">
                     <i class="fa-solid fa-envelope text-lg"></i>
                 </a>
             </div>
@@ -1828,6 +1828,7 @@
                 <a href="#solution" class="hover:text-lucas-green transition">Solution</a>
                 <a href="#pricing" class="hover:text-lucas-green transition">Pricing</a>
                 <a href="#faq" class="hover:text-lucas-green transition">FAQ</a>
+                <a href="https://app.lucas.app/lucas-api-docs.html" target="_blank" class="hover:text-lucas-green transition">API Docs</a>
             </div>
             
             <!-- Inspector Recruitment - Elevated Design -->
