--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@
                 <a href="#solution" class="hover:text-lucas-green transition">Solution</a>
                 <a href="#pricing" class="hover:text-lucas-green transition">Pricing</a>
                 <a href="#faq" class="hover:text-lucas-green transition">FAQ</a>
-                <a href="https://app.lucas.app/lucas-api-docs.html" target="_blank" class="hover:text-lucas-green transition">API Docs</a>
+                <a href="lucas-api-docs.html" target="_blank" class="hover:text-lucas-green transition">API Docs</a>
             </div>
             
             <!-- Inspector Recruitment - Elevated Design -->
