--- a/lucas-api-docs.html
+++ b/lucas-api-docs.html
@@ -59,7 +59,7 @@
             <!-- Logo Header -->
             <div class="p-5 border-b border-lucas-border flex-shrink-0">
                 <a href="https://lucas.app" class="flex items-center gap-3">
-                    <img src="https://lucas-app.github.io/lucas-pwa/LUCAS_logo%20White_on%20Rectangle_Transparent.png" alt="LUCAS" class="h-8">
+                    <img src="LUCAS_logo White_on Rectangle_Transparent.svg" alt="LUCAS" class="h-8" onerror="this.outerHTML='<span class=\'text-white font-bold text-lg\'>LUCAS</span>'">
                     <span class="text-gray-500 text-sm">API</span>
                 </a>
             </div>
