--- a/lucas-inspectors.html
+++ b/lucas-inspectors.html
@@ -80,9 +80,14 @@
                     <a href="#faq" class="nav-link text-sm font-medium text-gray-300 hover:text-white transition">FAQ</a>
                 </div>
                 
-                <a href="#apply" class="bg-lucas-green text-lucas-dark px-5 py-2.5 rounded-full font-bold hover:bg-white transition text-sm">
-                    Apply Now
-                </a>
+                <div class="flex items-center gap-4">
+                    <a href="https://app.lucas.app/inspectors.html" class="text-sm font-medium text-gray-400 hover:text-lucas-green transition hidden sm:block">
+                        Sign In
+                    </a>
+                    <a href="#apply" class="bg-lucas-green text-lucas-dark px-5 py-2.5 rounded-full font-bold hover:bg-white transition text-sm">
+                        Apply Now
+                    </a>
+                </div>
             </div>
         </div>
     </nav>
@@ -655,7 +660,7 @@
                     <a href="https://wa.me/971585072588" target="_blank" class="w-10 h-10 rounded-full bg-[#25D366] flex items-center justify-center text-white hover:scale-110 transition">
                         <i class="fa-brands fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="mailto:inspectors@lucas.app" class="text-gray-400 hover:text-white transition text-sm">inspectors@lucas.app</a>
+                    <a href="/cdn-cgi/l/email-protection#3851564b485d5b4c574a4b78544d5b594b16594848" class="text-gray-400 hover:text-white transition text-sm"><span class="__cf_email__" data-cfemail="96fff8e5e6f3f5e2f9e4e5d6fae3f5f7e5b8f7e6e6">[email&#160;protected]</span></a>
                 </div>
             </div>
             
@@ -665,7 +670,7 @@
         </div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Navbar scroll effect
         const navbar = document.getElementById('navbar');
         window.addEventListener('scroll', function() {
@@ -714,12 +719,4 @@
             const observer = new IntersectionObserver(function(entries) {
                 entries.forEach(function(entry) {
                     if (entry.isIntersecting) {
-                        entry.target.classList.add('visible');
-                    }
-                });
-            }, observerOptions);
-            document.querySelectorAll('.reveal').forEach(function(el) { observer.observe(el); });
-        });
-    </script>
-</body>
-</html>
+                        entry.ta
