--- a/inspectors.html
+++ b/inspectors.html
@@ -811,13 +811,16 @@
             position: relative;
             z-index: 1;
             cursor: pointer;
+            background: transparent;
+            border: none;
+            padding: 0;
         }
         
         .step-icon {
             width: 32px;
             height: 32px;
             border-radius: var(--radius-full);
-            background: var(--bg);
+            background: var(--elevated);
             border: 2px solid var(--border);
             display: flex;
             align-items: center;
