--- a/inspectors.html
+++ b/inspectors.html
@@ -136,7 +136,7 @@
         /* =============================================
            LOGIN SCREEN
            ============================================= */
-        .login-screen.active {
+        #login-screen.active {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -148,7 +148,7 @@
             overflow: hidden;
         }
         
-        .login-screen::before {
+        #login-screen::before {
             content: '';
             position: absolute;
             top: -50%;
