--- a/inspectors/index.html
+++ b/inspectors/index.html
@@ -10,8 +10,8 @@
     <title>LUCAS Inspector</title>
     
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icon-512.png">
-    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="icon" type="image/png" href="/icon-512.png">
+    <link rel="apple-touch-icon" href="/icon-192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
@@ -1799,7 +1799,7 @@
          ============================================= -->
     <div id="login-screen" class="screen active" role="main" aria-label="Login">
         <div class="login-container">
-            <img src="icon-512.png" alt="LUCAS Logo" class="login-logo">
+            <img src="/icon-512.png" alt="LUCAS Logo" class="login-logo">
             <h1 class="login-title">LUCAS Inspector</h1>
             <p class="login-subtitle">Dubai Pilot Program</p>
             
@@ -1858,7 +1858,7 @@
         <header class="header">
             <div class="header-top">
                 <div class="header-logo">
-                    <img src="icon-192.png" alt="">
+                    <img src="/icon-192.png" alt="">
                     <div>
                         <div class="header-logo-text">LUCAS</div>
                         <div class="header-greeting">Good <span id="greeting-time">morning</span>, <strong id="user-name">Inspector</strong></div>
@@ -1914,7 +1914,7 @@
         <header class="header" style="padding-bottom: var(--space-xl);">
             <div class="header-top" style="margin-bottom: 0;">
                 <div class="header-logo">
-                    <img src="icon-192.png" alt="">
+                    <img src="/icon-192.png" alt="">
                     <div class="header-logo-text">All Jobs</div>
                 </div>
             </div>
@@ -1949,7 +1949,7 @@
         <header class="header" style="padding-bottom: var(--space-xl);">
             <div class="header-top" style="margin-bottom: 0;">
                 <div class="header-logo">
-                    <img src="icon-192.png" alt="">
+                    <img src="/icon-192.png" alt="">
                     <div class="header-logo-text">Wallet</div>
                 </div>
             </div>
@@ -1984,7 +1984,7 @@
         <header class="header" style="padding-bottom: var(--space-xl);">
             <div class="header-top" style="margin-bottom: 0;">
                 <div class="header-logo">
-                    <img src="icon-192.png" alt="">
+                    <img src="/icon-192.png" alt="">
                     <div class="header-logo-text">Profile</div>
                 </div>
             </div>
